--- a/doccharacterizationproject/doccharacterizationapp/templates/index.html
+++ b/doccharacterizationproject/doccharacterizationapp/templates/index.html
@@ -25,7 +25,7 @@
                           <span class="current">
                               Page {{ news_list.number }} of {{ news_list.paginator.num_pages }}
                           </span>
-                      {% if paper_list.has_next %}
+                      {% if news_list.has_next %}
                           <a href="?page={{ news_list.next_page_number }}">next</a>
                           <a href="?page={{ news_list.paginator.num_pages }}">last &raquo;</a>
                       {% endif %}
