--- a/doccharacterizationproject/doccharacterizationapp/templates/news/detail.html
+++ b/doccharacterizationproject/doccharacterizationapp/templates/news/detail.html
@@ -2,15 +2,17 @@
 
 {% block content %}
 <div class="row pt-30">
-    <div class="col-md-12">       
-        <span class="title-details-news">
-            {{ news.title|upper }}
-        </span>
-        
-        {{ news.content|safe }}
-        <small style="padding-right: 10px">
-            <strong>Status: {{news.status }}</strong> 
-        </small>
+    <div class="container">
+        <div class="col-md-12">       
+            <span class="title-details-news">
+                {{ news.title|upper }}
+            </span>
+            
+            {{ news.content|safe }}
+            <small style="padding-right: 10px">
+                <strong>Status: {{news.status }}</strong> 
+            </small>
+        </div>
     </div>
 </div>
 
