--- a/doccharacterizationproject/doccharacterizationapp/templates/news/edit.html
+++ b/doccharacterizationproject/doccharacterizationapp/templates/news/edit.html
@@ -4,13 +4,15 @@
 {% load crispy_forms_tags %}
 
 <div class="row pt-30">
-    <h2>Edit Document</h2><br />
+    <div class="container">
     <div class="col-md-12">
+        <h2>Edit Document</h2><br />
         <form action="" method="post">
         {% csrf_token %}
         {{ form | crispy }}
         <input type="submit" value="submit">
         </form>
+    </div>
     </div>
 </div>
 
