--- a/doccharacterizationproject/templates/footer.html
+++ b/doccharacterizationproject/templates/footer.html
@@ -1,11 +1,13 @@
 <div class="row">
-        <div class="col-md-12">
-            <hr class="hr-footer" />
-            <footer class="mb-m-20">
-                <button onclick="topFunction()" id="myBtn" title="Angle up"><i class="fa fa-angle-up"></i></button>
-                <p>
-                    &copy; {% now 'Y' %} - Gabriel de Jesus & Sérgio Nunes
-                </p>
-            </footer>
+        <div class="container">
+            <div class="col-md-12">
+                <hr class="hr-footer" />
+                <footer class="mb-m-20">
+                    <button onclick="topFunction()" id="myBtn" title="Angle up"><i class="fa fa-angle-up"></i></button>
+                    <p>
+                        &copy; {% now 'Y' %} - Gabriel de Jesus & Sérgio Nunes
+                    </p>
+                </footer>
+            </div>
         </div>
 </div>
