--- a/doccharacterizationproject/doccharacterizationapp/templates/news/_news_list.html
+++ b/doccharacterizationproject/doccharacterizationapp/templates/news/_news_list.html
@@ -24,7 +24,7 @@
                 <td>{{ item.title }}</td>
                 <td> {{ item.lead|safe|truncatechars:35 }} </td>
                 <td>{{ item.status }}</td>
-                <td><span class="label label-warning"><a style="color: #ffff;" href="/news/{{ item.id }}/edit">Edit</a></span>
+                <td><span class="label label-warning"><a style="color: #ffff;" href="/news/{{ item.id }}/change">Edit</a></span>
                 <span class="label label-warning"><a style="color: #ffff;" href="/news/{{ item.id }}/detail">Detail</a></span></td>
                 <!-- 
                     <a href="http://old.timornews.tl/TL/Notisia/{{ item.slug}}" target="_blank"> </a> 
