minor improvement on template

--- a/doccharacterizationproject/doccharacterizationapp/templates/news/_news_list.html
+++ b/doccharacterizationproject/doccharacterizationapp/templates/news/_news_list.html
@@ -1,7 +1,7 @@
 <!--search box for desktop-->
 <form action="/search-result/" method="GET">
     <div class="input-group input-group-desktop">
-       <input name='text' required class="form-control input-md" type="text" placeholder="Search a document...">
+       <input name='text' required class="form-control input-md" type="text" placeholder="Search by title/status">
         <div class="input-group-append">
             <button class="btn btn-danger" style="position:absolute" type="submit">
                 <i class="fa fa-search"></i>
