--- a/doccharacterizationproject/doccharacterizationapp/templates/index.html
+++ b/doccharacterizationproject/doccharacterizationapp/templates/index.html
@@ -18,7 +18,7 @@
           <div class="col-md-12">
               <div class="pagination">
                   <span class="step-links">
-                      {% if paper_list.has_previous %}
+                      {% if news_list.has_previous %}
                           <a href="?page=1">&laquo; first</a>
                           <a href="?page={{ news_list.previous_page_number }}">previous</a>
                       {% endif %}
