--- a/doccharacterizationproject/doccharacterizationapp/templates/news/_news_list.html
+++ b/doccharacterizationproject/doccharacterizationapp/templates/news/_news_list.html
@@ -21,7 +21,11 @@
     <tbody>
         {% for item in news_list %}
             <tr>
-                <td>{{ item.title }}</td>
+                {% if item.slug|length > 10 %}
+                    <td><a href="https://www.timornews.tl/notisia/{{item.slug}}" target="_blank">{{ item.title|truncatechars:75 }}</a></td>
+                {% else %}
+                    <td><a href="http://www.old.timornews.tl/TL/Notisia/{{item.slug}}" target="_blank">{{ item.title|truncatechars:75 }}</a></td>
+                {% endif %}
                 <td> {{ item.lead|safe|truncatechars:35 }} </td>
                 <td>{{ item.status }}</td>
                 <td><span class="label label-warning"><a style="color: #ffff;" href="/news/{{ item.id }}/change">Edit</a></span>
