--- a/doccharacterizationproject/doccharacterizationapp/templates/news/_news_list.html
+++ b/doccharacterizationproject/doccharacterizationapp/templates/news/_news_list.html
@@ -22,15 +22,16 @@
         {% for item in news_list %}
             <tr>
                 {% if item.slug|length > 10 %}
-                    <td><a href="https://www.timornews.tl/notisia/{{item.slug}}" target="_blank">{{ item.title|truncatechars:75 }}</a></td>
+                    <td><a href="{{item.url}}" target="_blank">{{ item.title|truncatechars:75 }}</a></td>
                 {% else %}
-                    <td><a href="http://www.old.timornews.tl/TL/Notisia/{{item.slug}}" target="_blank">{{ item.title|truncatechars:75 }}</a></td>
+                    <td><a href="{{item.url}}" target="_blank">{{ item.title|truncatechars:75 }}</a></td>
                 {% endif %}
                 <td> {{ item.lead|safe|truncatechars:35 }} </td>
                 <td>{{ item.status }}</td>
                 <td><span class="label label-warning"><a style="color: #ffff;" href="/news/{{ item.id }}/change">Edit</a></span>
                 <span class="label label-warning"><a style="color: #ffff;" href="/news/{{ item.id }}/detail">Detail</a></span></td>
                 <!-- 
+                    <td><a href="/news/{{ item.id }}/confirm/delete/">Delete</a> </td> 
                     <a href="http://old.timornews.tl/TL/Notisia/{{ item.slug}}" target="_blank"> </a> 
                     <td><a href="/news/{{ news.id }}/confirm/delete/">Delete</a> </td> 
                 -->
