--- a/doccharacterizationproject/doccharacterizationapp/templates/news/detail.html
+++ b/doccharacterizationproject/doccharacterizationapp/templates/news/detail.html
@@ -8,7 +8,7 @@
                 {{ news.title|upper }}
             </span> 
             <div class="lead pt-10 pb-10" style="background-color: rgb(233, 233, 189); padding-left: 5px;">
-                {{ news.lead }}
+                {{ news.headline }}
             </div>        
             {{ news.content|safe }}
             <small style="padding-right: 10px">
